# arm_emulator

./: CMakeLists.txt  README.md
include/: emulator.h
src/: emulator.cpp  interactive.cpp  main.cpp
tests/: emulator_test.cpp
